1.indi.layout.css: added vertical-align css rule for color boxes 2.action/Form.js: added fix 4 getHeight() call in 3.Trail/Admin/Item.php: added grid-col auto-addition for sections having `groupBy`

--- a/css/admin/indi.layout.css
+++ b/css/admin/indi.layout.css
@@ -17,6 +17,7 @@
     margin: -3px 0 0 0;
     position: relative;
     top: 2px;
+    vertical-align: text-bottom;
 }
 .i-bgimg-box-wrap .i-color-box[style*="background: url"]{
     vertical-align: text-bottom;
